# sps-eq

./: Cargo.toml  README.md
.github/workflows/: linter.yml
benches/: sps_eq_sig_benches.rs
examples/: bba_verification_example.rs
src/: errors.rs  lib.rs  sign.rs  verify.rs
tests/: integration_test.rs
