[package]
name = "sps_eq"
version = "0.1.0"
authors = ["iquereta <querejeta.inigo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For some reason, when I get the latest revision, it does not work ?
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }

rand = "0.7"

[dev-dependencies]
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", rev = "39c58df", default-features = false, features = ["curve"] }
criterion = "0.3"

[[bench]]
name = "sps_eq_sig_benches"
harness = false