[package]
name = "sps_eq"
version = "0.1.0"
authors = ["iquereta <iquerejeta@brave.com>"]
edition = "2018"
exclude = [".gitignore","/target/*"]
description = "A pure-Rust implementation of Structure Preserving Signatures over Equivalence Classes"
readme = "README.md"
keywords = ["cryptography", "randomisable-signatures", "digital-signatures"]
categories = ["cryptography"]
repository = "https://github.com/brave-experiments/sps-eq"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For some reason, when I get the latest revision, it does not work ?
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }

rand = "0.7"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex-header.html"
    ]

[build]
rustdocflags = [ "--html-in-header", "./katex-header.html" ]

[dev-dependencies]
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", rev = "39c58df", default-features = false, features = ["curve"] }
criterion = "0.3"

[[bench]]
name = "sps_eq_sig_benches"
harness = false